Rename service from emv-qr-app to qrdemo

--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,9 @@
 services:
   - type: web
-    name: emv-qr-app
+    name: qrdemo
     env: docker
     plan: free
 
     dockerfilePath: ./Dockerfile
     autoDeploy: true
+
